# bai_to_gl_recon

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default_config.yaml
sample_data/: bank_statement.bai  sage_intacct_transactions.csv
src/bai_intacct_recon/: __init__.py  __main__.py  cli.py  config.py
src/bai_intacct_recon/matching/: __init__.py  engine.py  strategies.py
src/bai_intacct_recon/models/: __init__.py  transaction.py
src/bai_intacct_recon/parsers/: __init__.py  bai2_parser.py  intacct_parser.py
src/bai_intacct_recon/reports/: __init__.py  excel_generator.py
src/bai_intacct_recon/utils/: __init__.py  exceptions.py  logging_config.py
